<resources>
    <string name="app_name">Mobile Dev - Assignment 1</string>
    <string name="title_activity_main">Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_tracking">Add a tracking event</string>
    <string name="trackable_detail">Whatever detail</string>
    <string name="trackable_list">Trackable list</string>
    <string name="tracking_detail">Event detail</string>
    <string name="action_add_event">Add event</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_cancel">Cancel</string>
    <string name="tracking_list">Tracking list</string>
    <string name="trackable_pick">Pick a trackable</string>
    <string name="stationary_time_pick">Pick a stationary time</string>
    <string name="edit_event">Edit event</string>
    <string name="search">Search</string>
    <string name="pick_meet_time">Pick a meet time</string>
    <string name="title">Title</string>
    <string name="hint_add_title">Add title</string>
    <string name="start_time">Start time</string>
    <string name="meet_time">Meet time</string>
    <string name="end_time">End time</string>
    <string name="current_location">Current location</string>
    <string name="meet_location">Meet location</string>
    <string name="hint_add_meet_time">Add meet time</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="url">Website URL</string>
    <string name="category">Category</string>
    <string name="track">Track</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="trackable">Trackable</string>
    <string name="travel_time">Travel Time</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
</resources>
