<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_event"
        android:title="@string/action_add_event"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>