<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddTrackingActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="bottom|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="333dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:hint="@string/hint_add_title"
                android:inputType="text"
                android:singleLine="false" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="285dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/start_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:hint="@string/start_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="283dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/meet_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addMeetTIme"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:hint="@string/hint_add_meet_time"
                android:textSize="18sp" />

            <Button
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/pick_meet_time" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="290dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/end_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:hint="@string/end_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="236dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/current_location"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addCurrentLocation"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:hint="@string/current_location"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="253dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:text="@string/meet_location"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addMeetLocation"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:hint="@string/meet_location"
                android:textSize="18sp" />

            <Button
                android:id="@+id/deleteEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="end|bottom"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="invisible" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="?android:attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>